Thu Sep  8 18:43:12 2005  Steve Huston  <shuston@riverace.com>

	* tests/Based_Pointer_Test.cpp (mmap_remap_test): Don't keep increasing
	  the allocation until the base pointer changes without checking for
	  an allocation failure. This caused all memory to be absorbed on AIX
	  without remapping the base, then the log file was so big that
	  the log processor for the scoreboard ran out of memory processing it.

Thu Sep  8 06:47:11 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:

          Allow files with .. in the path to count in the VPATH setting.

Wed Sep  7 14:44:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/SSL/Makefile.am:
        * examples/C++NPv2/Makefile.am:
        * examples/IPC_SAP/SSL_SAP/Makefile.am:

          Regenerated.

        * bin/MakeProjectCreator/config/ace_openssl.mpb:

          Use 'compile_flags' instead of 'includes' to set compile flags
          to @ACE_TLS_CPPFLAGS@.  Thanks to Chad Elliot for this hint.

          Uncomment automake "specific" block.

Tue Sep  6 22:02:16 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/ace_openssl.mpb:

          Subtract /usr/kerberos/includes from includes for automake
          builds.

          Changed ${ACE_TLS_FOO} to @ACE_TLS_FOO@ so variables will be
          substituted by the values obtained by the configure script.

Tue Sep  6 21:56:43 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/tls.m4:

          Changed to substitute ACE_TLS_CPPFLAGS and ACE_TLS_LDFLAGS like
          was done with ACE_TLS_LIBS.

Tue Sep  6 19:43:47 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/automake.features:

          New features file for automake build.

Tue Sep  6 17:37:15 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/ssl.mpb:
        * ace/SSL/ssl.mpc:
