@@ -1,3 +1,11 @@
+Thu Sep  8 16:33:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* m4/tls.m4:
+
+	  Added support for --with-openssl, --with-openssl-include, and
+	  --with-openssl-libdir options so users can select or override
+	  the location of the OpenSSL libraries.
+
 Thu Sep  8 18:43:12 2005  Steve Huston  <shuston@riverace.com>
 
 	* tests/Based_Pointer_Test.cpp (mmap_remap_test): Don't keep increasing
